tests/loadbalance/hostname-dr-random.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: hostname-lb-test-svc
spec:
  host: hostname-lb-test
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
