tests/loadbalance/hostname-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hostname-lb-test-svc
spec:
  selector:
    app: hostname-lb-test
  ports:
    - name: http-0
      port: 12345
      protocol: TCP
      targetPort: 9376
